// EcoMarket Riwi S.A.S. - Entity Relationship Model (3NF)
// Import this file at https://dbdiagram.io  (Import > From DBML)

Table eco_city {
  city_id     int         [pk, increment]
  city_name   varchar(80) [not null, unique]
}

Table eco_category {
  category_id   int         [pk, increment]
  category_name varchar(80) [not null, unique]
}

Table eco_client {
  client_id   int          [pk, increment]
  client_name varchar(120) [not null, unique]
}

Table eco_distribution_center {
  center_id   int          [pk, increment]
  center_name varchar(120) [not null, unique]
}

Table eco_product {
  product_id   int           [pk, increment]
  product_name varchar(150)  [not null, unique]
  unit_price   decimal(10,2) [not null, note: 'CHECK > 0']
  category_id  int           [not null, ref: > eco_category.category_id]
}

Table eco_order {
  order_id   int         [pk, increment]
  order_code varchar(20) [not null, unique]
  order_date date        [not null]
  client_id  int         [not null, ref: > eco_client.client_id]
  center_id  int         [not null, ref: > eco_distribution_center.center_id]
  city_id    int         [not null, ref: > eco_city.city_id]
}

Table eco_order_detail {
  order_detail_id int [pk, increment]
  order_id        int [not null, ref: > eco_order.order_id]
  product_id      int [not null, ref: > eco_product.product_id]
  quantity        int [not null, note: 'CHECK > 0']

  indexes {
    (order_id, product_id) [unique]
  }
}

Table eco_inventory {
  inventory_id int [pk, increment]
  product_id   int [not null, ref: > eco_product.product_id]
  center_id    int [not null, ref: > eco_distribution_center.center_id]
  stock        int [not null, note: 'CHECK >= 0']

  indexes {
    (product_id, center_id) [unique]
  }
}
